--- a/src/layout/Main.module.scss
+++ b/src/layout/Main.module.scss
@@ -1,23 +1,41 @@
 .container {
-  min-width: 200px;
-  height: 100vh;
-  display: grid;
+  height: 100%;
+  display: flex;
   flex-direction: column;
-  grid-template-rows: 65px minmax(65vh, auto) auto;
+}
 
-  // Todo revisar en el stylesystem
-  & > div:first-of-type {
-    box-shadow: 0 0 6px 0 rgb(0 0 0 / 20%);
-    z-index: 1;
-    height: 65px;
+.header-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+
+  .header-title {
+    margin: 0;
+    color: var(--primary);
+  }
+
+  .header-user-wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0.75rem;
+    align-items: center;
+    color: var(--primary);
+
+    p {
+      margin: 0;
+      font-weight: 500;
+    }
   }
 }
 
 .main {
-  background-color: var(--background-page);
-  padding: 1em;
+  width: 100%;
+  height: 100%;
   display: flex;
-  align-content: center;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  flex-grow: 1;
 }
